
= OpenWFEru "ruote-web2" - CHANGELOG.txt


== ruote-web2 - 0.9.20    not yet released

- todo  #22883 : upgraded to rails 2.2
