@@ -4,5 +4,6 @@
 
 == ruote-web2 - 0.9.20    not yet released
 
+- todo  #22935 : integrated LinkGenerator
 - todo  #22883 : upgraded to rails 2.2
 
